--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^1.3.13",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.58",
-        "@testing-library/jest-dom": "^5.11.8",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
         "axios": "^0.21.1",
+        "date-fns": "^2.22.1",
         "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
