--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "4.0.1",
+        "react-scroll-to-bottom": "^4.1.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "socket.io-client": "^2.3.0",
