--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-beautiful-dnd": "^13.1.0",
+        "react-datetime-picker": "^3.3.0",
         "react-dom": "^17.0.1",
         "react-redux": "^7.1.3",
         "react-router": "^5.1.2",
