--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@testing-library/user-event": "^12.6.0",
         "axios": "^0.21.1",
         "date-fns": "^2.22.1",
+        "formik": "^2.2.8",
         "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-beautiful-dnd": "^13.1.0",
