--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
         "axios": "^0.21.1",
+        "chart.js": "^3.3.2",
         "date-fns": "^2.22.1",
         "formik": "^2.2.8",
         "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-beautiful-dnd": "^13.1.0",
+        "react-chartjs-2": "^3.0.3",
         "react-datetime-picker": "^3.3.0",
         "react-dom": "^17.0.1",
         "react-redux": "^7.1.3",
